Experimental HZDR slop support